objects/MaintenanceAccountBook__c.object
<CustomObject>
    <fields>
        <fullName>AlreadyBilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyBilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAmountEstimate__c</fullName>
        <label>請求（予定）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingMethod__c</fullName>
        <formula>IF (TEXT(Type__c) == &apos;4&apos;,  MaintenanceContractManagement__r.BillingMethodHelium__c , MaintenanceContractManagement__r.BillingMethodHontai__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>請求方法</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassTriggerCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassTriggerCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InspectionDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>点検済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>点検</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceNumberAuto__c</fullName>
        <label>J請求番号</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumberFormula__c</fullName>
        <formula>IF (ISBLANK(InvoiceNumber__c), InvoiceNumberAuto__c, InvoiceNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>請求番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>M請求番号</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <label>商品名</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineOrder__c</fullName>
        <description>Technical field used to sort by Month / SalesReturn in the related lists</description>
        <formula>HYPERLINK(Month__c + IF(SalesReturn__c, &apos;2&apos;, &apos;1&apos;), &apos;&apos;) + ItemName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>保守契約管理（本体、点検有り）</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>Account Book (保守契約管理（本体、点検有り）)</relationshipLabel>
        <relationshipName>AccountBook1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>保守契約管理（本体、点検無し）</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>Account Book (保守契約管理（本体、点検無し）)</relationshipLabel>
        <relationshipName>AccountBook2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaintenanceContractManagement3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>保守契約管理（アタッチ）</label>
        <referenceTo>MaintenanceContractManagement__c</referenceTo>
        <relationshipLabel>Account Book (保守契約管理（アタッチ）)</relationshipLabel>
        <relationshipName>AccountBook3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>月</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAmountEstimateAndReturn__c</fullName>
        <formula>IF(ISNULL(SalesAmountEstimate__c), 0, SalesAmountEstimate__c) +
IF (SalesReturn__c, IF(ISNULL(SalesAmountReal__c), 0, SalesAmountReal__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesAmountEstimateAndReturn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesAmountEstimate__c</fullName>
        <label>売上（予定）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesAmountReal__c</fullName>
        <label>売上（実績）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesAuto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>自動売上</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>売上戻し</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>税金コード</label>
        <picklist>
            <picklistValues>
                <fullName>A01</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueKey2__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey2</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>保守管理台帳</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>greaterThan</operation>
            <value>2016/01/01</value>
        </filters>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>IT_View01</fullName>
        <columns>MaintenanceContractManagement__c</columns>
        <columns>NAME</columns>
        <columns>AlreadyBilled__c</columns>
        <columns>SalesReturn__c</columns>
        <columns>Inspection__c</columns>
        <columns>InspectionDone__c</columns>
        <columns>SalesAmountEstimate__c</columns>
        <columns>SalesAmountReal__c</columns>
        <columns>SalesAuto__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MaintenanceContractManagement__c</field>
            <operation>equals</operation>
            <value>PLM-00004122</value>
        </filters>
        <label>保守契約管理番号指定View</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>月</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>